# serializer version: 1
# name: test_user_flow
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': '3c:e9:0e:6d:21:84',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'token': '987654',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'tailwind',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'token': '987654',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'tailwind',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'Tailwind iQ3',
      'unique_id': '3c:e9:0e:6d:21:84',
      'version': 1,
    }),
    'title': 'Tailwind iQ3',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_zeroconf_flow
  FlowResultSnapshot({
    'context': dict({
      'configuration_url': 'https://web.gotailwind.com/client/integration/local-control-key',
      'source': 'zeroconf',
      'title_placeholders': dict({
        'name': 'Tailwind iQ3',
      }),
      'unique_id': '3c:e9:0e:6d:21:84',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'token': '987654',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'tailwind',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'token': '987654',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'tailwind',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'zeroconf',
      'title': 'Tailwind iQ3',
      'unique_id': '3c:e9:0e:6d:21:84',
      'version': 1,
    }),
    'title': 'Tailwind iQ3',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
